tests/ui/fail/unnamed_struct.rs
fn main() {}

#[::pud::pud]
pub struct Foo(u8); // missing rename for tuple fields
